--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
         </button>
       </div>
     </div>
+  </div>
 </header>
 
     <main class="main">
@@ -65,7 +66,7 @@
         <div class="form__field form__field-wrap">
           <input type="tel" class="form__field inputForSelect input-tel tel" name="tel">
           <select name="select">
-            <option data-country-flag="canada" value="canada" aria-label="canada"></option>
+            <option data-country-flag="canada" value="canada"></option>
             <option data-country-flag="urugvay" value="urugvay"></option>
             <option data-country-flag="china" value="china"></option>
             <option data-country-flag="argentina" value="argentina"></option>
