--- a/index.html
+++ b/index.html
@@ -66,9 +66,13 @@
         <div class="form__field form__field-wrap">
           <input type="tel" class="form__field inputForSelect input-tel tel" name="tel">
           <select name="select">
-            <option data-country-flag="canada" value="canada"></option>
+            <label for="canada" class="visually-hidden">canada</label>
+            <option data-country-flag="canada" value="canada" id="canada"></option>
+            <label for="urugvay" class="visually-hidden">urugvay</label>
             <option data-country-flag="urugvay" value="urugvay"></option>
+            <label for="china" class="visually-hidden">china</label>
             <option data-country-flag="china" value="china"></option>
+            <label for="argentina" class="visually-hidden">argentina</label>
             <option data-country-flag="argentina" value="argentina"></option>
           </select>
         </div>
