--- a/index.html
+++ b/index.html
@@ -270,10 +270,10 @@
           <div class="form__field form__field-wrap">
             <input type="tel" class="form__field inputForSelect input-tel tel" name="tel">
             <select name="select">
-              <option data-country-flag="canada" value="canada"></option>
-              <option data-country-flag="urugvay" value="urugvay"></option>
-              <option data-country-flag="china" value="china"></option>
-              <option data-country-flag="argentina" value="argentina"></option>
+              <option data-country-flag="canada" value="canada" id="canada" label="canada"></option>
+              <option data-country-flag="urugvay" value="urugvay"  label="urugvay"></option>
+              <option data-country-flag="china" value="china"  label="china"></option>
+              <option data-country-flag="argentina" value="argentina"  label="argentina"></option>
             </select>
           </div>
           <button class="form__field form__submit-btn">Take Discovery Call</button>
@@ -470,10 +470,10 @@
         <div class="form__field form__field-wrap">
           <input type="tel" class="form__field inputForSelect input-tel tel" name="tel">
           <select name="select">
-            <option data-country-flag="canada" value="canada"></option>
-            <option data-country-flag="urugvay" value="urugvay"></option>
-            <option data-country-flag="china" value="china"></option>
-            <option data-country-flag="argentina" value="argentina"></option>
+            <option data-country-flag="canada" value="canada" id="canada" label="canada"></option>
+            <option data-country-flag="urugvay" value="urugvay"  label="urugvay"></option>
+            <option data-country-flag="china" value="china"  label="china"></option>
+            <option data-country-flag="argentina" value="argentina"  label="argentina"></option>
           </select>
         </div>
         <button class="form__field form__submit-btn">Take Discovery Call</button>
