--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
         <div class="form__field form__field-wrap">
           <input type="tel" class="form__field inputForSelect input-tel tel" name="tel">
           <select name="select">
-            <option data-country-flag="canada" value="canada" id="canada" label="canada"></option>
+            <option data-country-flag="canada" value="canada" label="canada"></option>
             <option data-country-flag="urugvay" value="urugvay"  label="urugvay"></option>
             <option data-country-flag="china" value="china"  label="china"></option>
             <option data-country-flag="argentina" value="argentina"  label="argentina"></option>
@@ -270,7 +270,7 @@
           <div class="form__field form__field-wrap">
             <input type="tel" class="form__field inputForSelect input-tel tel" name="tel">
             <select name="select">
-              <option data-country-flag="canada" value="canada" id="canada" label="canada"></option>
+              <option data-country-flag="canada" value="canada" label="canada"></option>
               <option data-country-flag="urugvay" value="urugvay"  label="urugvay"></option>
               <option data-country-flag="china" value="china"  label="china"></option>
               <option data-country-flag="argentina" value="argentina"  label="argentina"></option>
@@ -470,7 +470,7 @@
         <div class="form__field form__field-wrap">
           <input type="tel" class="form__field inputForSelect input-tel tel" name="tel">
           <select name="select">
-            <option data-country-flag="canada" value="canada" id="canada" label="canada"></option>
+            <option data-country-flag="canada" value="canada" label="canada"></option>
             <option data-country-flag="urugvay" value="urugvay"  label="urugvay"></option>
             <option data-country-flag="china" value="china"  label="china"></option>
             <option data-country-flag="argentina" value="argentina"  label="argentina"></option>
